config(vercel): updated vercel config command from rewrites to redirects

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "rewrites": [
+  "redirects": [
     { "source": "/", "destination": "/index.html" },
     { "source": "/home", "destination": "/index.html" },
     { "source": "/about", "destination": "/about.html" },
