config(vercel): upadted the configuration file to accept more keys

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,23 @@
 {
   "redirects": [
-    { "source": "/", "destination": "/index.html" },
-    { "source": "/home", "destination": "/index.html" },
-    { "source": "/about", "destination": "/about.html" },
-    { "source": "/contact", "destination": "/contact.html" },
-    { "source": "/portfolio", "destination": "/skills.html" }
+    {
+      "source": "/home",
+      "destination": "/index.html",
+      "permanent": true
+    },
+      "source": "/about",
+      "destination": "/about.html",
+      "permanent": true
+    },
+    {
+      "source": "/contact",
+      "destination": "/contact.html",
+      "permanent": true
+    },
+    {
+      "source": "/portfolio",
+      "destination": "/skills.html",
+      "permanent": true
+    }
   ]
 }
