config(vercel): updated the configuration file to work with pure html/css with no frameworks

--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,3 @@
 {
-  "redirects": [
-    {
-      "source": "/home",
-      "destination": "/index.html",
-      "permanent": true
-    },
-    {
-      "source": "/about",
-      "destination": "/about.html",
-      "permanent": true
-    },
-    {
-      "source": "/contact",
-      "destination": "/contact.html",
-      "permanent": true
-    },
-    {
-      "source": "/portfolio",
-      "destination": "/skills.html",
-      "permanent": true
-    }
-  ]
+  "cleanUrls": true
 }
